--- a/index.html
+++ b/index.html
@@ -1,7 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Welcome to My GitHub Pages Site">
+  <title>My Website</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <header>
+    <h1>Welcome to My Website</h1>
+    <p>This is a simple GitHub Pages website.</p>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about.html">About</a></li>
+      <li><a href="/projects.html">Projects</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section>
+      <h2>About This Site</h2>
+      <p>This site is built using GitHub Pages and Jekyll. Customize it to fit your needs!</p>
+    </section>
+
+    <section>
+      <h2>Featured Projects</h2>
+      <ul>
+        <li><a href="https://github.com/yourusername/project1">Project 1</a></li>
+        <li><a href="https://github.com/yourusername/project2">Project 2</a></li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2024 My Website. Built with <a href="https://pages.github.com/">GitHub Pages</a>.</p>
+  </footer>
 </body>
 </html>
