--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main>
     <section>
       <h2>About This Site</h2>
-      <p>This site is built using GitHub Pages and Jekyll. Customize it to fit your needs!</p>
+      <p>I designed this website to have a digital print of my profesisonal endavours</p>
     </section>
 
     <section>
