--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to My Website</h1>
-    <p>This is a simple GitHub Pages website.</p>
+    <h1>Welcome to My Portfolio</h1>
   </header>
 
   <nav>
