--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
   <main>
     <section>
       <h2>About This Site</h2>
-      <p>I designed this website to have a digital print of my profesisonal endavours</p>
+      <p>I designed this website to have a digital print of my professional and personal work</p>
     </section>
 
     <section>
       <h2>Featured Projects</h2>
       <ul>
-        <li><a href="https://github.com/yourusername/project1">Project 1</a></li>
+        <li><a href="https://github.com/ZiadMotagaly/number_sense">Project 1</a></li>
         <li><a href="https://github.com/yourusername/project2">Project 2</a></li>
       </ul>
     </section>
