--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section>
       <h2>Featured Projects</h2>
       <ul>
-        <li><a href="https://github.com/ZiadMotagaly/number_sense">Project 1</a></li>
+        <li><a href="https://github.com/ZiadMotagaly/number_sense"> Number Sensing </a></li>
         <li><a href="https://github.com/yourusername/project2">Project 2</a></li>
       </ul>
     </section>
