--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h2>Featured Projects</h2>
       <ul>
         <li><a href="https://github.com/ZiadMotagaly/number_sense"> Number Sensing </a></li>
-        <li><a href="https://github.com/yourusername/project2">Project 2</a></li>
+        <li><a href="https://github.com/ZiadMotagaly/photogram">Photogrammetry</a></li>
       </ul>
     </section>
   </main>
