--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </main>
 
   <footer>
-    <p>© 2024 Ziad Motagaly. Built with <a href="https://pages.github.com/">GitHub Pages</a>.</p>
+    <p>© 2024 Ziad Motagaly</p>
   </footer>
 </body>
 </html>
