--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Welcome to My GitHub Pages Site">
-  <title>My Website</title>
+  <title>Ziad Motagaly</title>
 </head>
 <body>
   <header>
